--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="Future teacher">
+  <meta name="author" content="862432035">
 
-  <title>John Doe - Business Administration</title>
+  <title>Cesilia Lozano-Aquino - Elementary Teacher</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Cesilia Lozano-Aquino</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/firstnamelastname.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Cesilia Lozano-Aquino
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">School of Education📚</div>
+        <p class="lead mb-4">I am a first year student at the University of Riverside California. My expected graduation year is 2026. I am working on graduating from the School of education with my Bachelor’s in Education and Human Development. Also double majoring in Liberal Studies. I was born in Santa Ana California and raised in San Bernardino California.<br><br>
 
-        Enter bio here<br><br>
+        My dream Career is to become an elementary school teacher. I would like to become a teacher in the dual enrollment program. I was in the program myself for my k-12 education and enjoyed it. My backup plan would be a teacher in high school. I received my state seal of biliteracy in high school and was reclassified in English in 3rd grade. I was able to accomplish so much in just being in the dual immersion program. I learned a lot in both languages and had many advantages and opportunities that helped me in my education. From having such a good experience in my k-12 education in the dual immersion program, I want to give other students that opportunity as well. I want them to embrace both languages and help people in both. Being bilingual is important to me because you can meet new people in both because you can communicate with them in both languages. I want the same for other students. I believe that it can open up more opportunities in life and in their career. <br><br>
 
-        Enter bio here
+        In order to accomplish all of this, I will continue to expand my knowledge in both languages. I do not want to forget neither Spanish nor English. I would even like to continue learning ASL. It catches my attention as well. Being able to communicate with so many people in different languages is cool and important for me. Getting internships will help reach my career path. I am thinking about studying abroad in Mexico and other places in the world. I am excited to see what the future holds for me, can’t wait to experience it.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://github.com/cloza0">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://www.youtube.com/watch?v=E1-7sZXSXCU&t=1s">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.google.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://www.ucr.edu/">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Cashier in Retail</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">DD's Discount</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Helped out customers<br> 
+              • Handled money<br>
+              • Spoked two languages<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">October 2023 - December 2023</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Spanish Honor Society President</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">San Bernardino High School</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Led the club meetings<br>
+              • Created events for the club<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">September 2022 - June 2023</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Stage Manager</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">San Bernardino Theater Department</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Oversees all crews<br>
+            • Called out cuess<br>
+            • In charged of Blocking<br>
+          
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2022 - April 2022</span>
           </div>
         </div>
 
@@ -152,33 +152,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors in Education and Human Development</div>
+            <div>Double majoring in Liberal Studies</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2023 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">San Bernardino High School</h3>
+            <div class="subheading mb-3">Class of 2023</div>
+            <div>Graduated with Honors and in Dual Enrollment</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2023</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0">San Bernardino Cal State University</h3>
+            <div class="subheading mb-3">CSU Chem</div>
+            <div>Earned College Credit in Chemistry</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2021- June 2022/span>
           </div>
         </div>
 
@@ -191,7 +191,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/IMG_3861.jpg" width="500px">
+              <img src="img/IMG_3862.jpg" width="500px"><br>
+    <img src="img/IMG_3863.jpg" width="500px">
+    <img src="img/IMG_3864.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +202,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Cesilia Lozano-Aquino</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
